--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <div class="contact-social">
             <span class="phone">📞 +876545678909</span>
             <div class="social-icons">
-                <a href="#"><img src="facebook.png" alt="Facebook"></a>
+                <a href="#"><img src="Facebook.png" alt="Facebook"></a>
                 <a href="#"><img src="twitter.jpg" alt="Twitter"></a>
                 <a href="#"><img src="linkdin.jpg" alt="LinkedIn"></a>
                 <a href="#"><img src="youtube.jpg" alt="YouTube"></a>
